--- a/grid.css
+++ b/grid.css
@@ -11,7 +11,9 @@
     padding-left: 10px;
     padding-right: 10px;
 }
-
+#head.container {
+    background-color: cornflowerblue;
+}
 .row {
     margin-right: -10px;
     margin-left: -10px;
