--- a/grid.css
+++ b/grid.css
@@ -29,51 +29,51 @@
     position: relative;
 }
 
-.col-mb-1 {
+.col-md-1 {
     width: 8.33333%;
 }
 
-.col-mb-2 {
+.col-md-2 {
     width: 16.66667%;
 }
 
-.col-mb-3 {
+.col-md-3 {
     width: 25%;
 }
 
-.col-mb-4 {
+.col-md-4 {
     width: 33.33333%;
 }
 
-.col-mb-5 {
+.col-md-5 {
     width: 41.66667%;
 }
 
-.col-mb-6 {
+.col-md-6 {
     width: 50%;
 }
 
-.col-mb-7 {
+.col-md-7 {
     width: 58.33333%;
 }
 
-.col-mb-8 {
+.col-md-8 {
     width: 66.66667%;
 }
 
-.col-mb-9 {
+.col-md-9 {
     width: 75%;
 }
 
-.col-mb-10 {
+.col-md-10 {
     width: 83.33333%;
 }
 
-.col-mb-11 {
+.col-md-11 {
     width: 91.66667%;
 }
 
-.col-mb-12 {
+.col-md-12 {
     width: 100%;
 }
 
